add favicon; knit

--- a/slides.html
+++ b/slides.html
@@ -8,9 +8,11 @@
     <script src="slides_files/header-attrs/header-attrs.js"></script>
     <link href="slides_files/tile-view/tile-view.css" rel="stylesheet" />
     <script src="slides_files/tile-view/tile-view.js"></script>
+    <link href="slides_files/animate.css/animate.xaringan.css" rel="stylesheet" />
     <link href="slides_files/xaringanExtra-banner/banner.css" rel="stylesheet" />
     <script src="slides_files/xaringanExtra-banner/banner.js"></script>
-    <link rel="stylesheet" href="css/xaringan-themer.css" type="text/css" />
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/310/relieved-face_1f60c.png"/>
+    <link rel="stylesheet" href="assets/css/xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -36,6 +38,23 @@ class: center, middle, inverse, title-slide
 
 <script>document.addEventListener('DOMContentLoaded',function(){new xeBanner(JSON.parse('{"left":"<style>:root {\n  --xe-banner-fg: #5A6E73;\n  --xe-banner-font-size: 20pt;\n}<\/style>","right":"lizroten.com/slides","position":"bottom"}'))})</script>
 
+# There are 
+
+---
+class: animated fadeInUp fadeOutUp
+.pull-left[
+### From this...  
+&lt;img src="./assets/fig/stitch_eyes.webp" width="600px" /&gt;
+
+]
+---
+class: animated fadeInUp fadeOutUp
+.pull-right[
+### ...to this
+&lt;img src="./assets/fig/tart_icing.gif" width="380px" height="475px" /&gt;
+]
+
+---
 ## Typography
 
 Text can be **bold**, _italic_, ~~strikethrough~~, or `inline code`.
@@ -93,11 +112,29 @@ class: inverse center middle
 
 # Project Intake
 
+---
+# Assess the damage
 
+- Keep a list of all the things you dislike
+- Replicate findings/results
+- Find your thing
+
+---
+# What is your thing?
+
+find something about this project that you can go all-out. 
+
+Do you like maps? Make the best maps ever  
+Do you like plots? Make some gorgeous visualizations
 ---
 class: inverse center middle
 
 # Do and document
+
+---
+💌
+
+&gt; Documentation is a love letter to your future self.  - Damien Conway 
 
 ---
 class: inverse center middle
@@ -105,17 +142,86 @@ class: inverse center middle
 # Post-project debrief
 
 ---
+# Leave a gift, not a mystery
+
+---
 class: center, middle
 
 # Thanks!
+---
+class: end-matter
 
-Slides created via the R packages:
+#### Project packages
+Aden-Buie, G. (2022). _xaringanthemer: Custom xaringan CSS Themes_.
+https://pkg.garrickadenbuie.com/xaringanthemer/.
 
-[xaringan](https://github.com/yihui/xaringan)&lt;br&gt;
-[gadenbuie/xaringanthemer](https://github.com/gadenbuie/xaringanthemer)
+Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and
+Extensions for xaringan Slides_. R package version 0.6.0. URL:
+[https://CRAN.R-project.org/package=xaringanExtra](https://CRAN.R-project.org/package=xaringanExtra).
+
+Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package
+version 0.1.8. URL:
+[https://CRAN.R-project.org/package=aRtsy](https://CRAN.R-project.org/package=aRtsy).
+
+Hester, J., H. Wickham, and G. Csárdi (2021). _fs: Cross-Platform File
+System Operations Based on libuv_. R package version 1.5.2. URL:
+[https://CRAN.R-project.org/package=fs](https://CRAN.R-project.org/package=fs).
+
+McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and
+BibLaTeX References in R". In: _The Journal of Open Source Software_.
+DOI: [10.21105/joss.00338](https://doi.org/10.21105%2Fjoss.00338).
+
+\-\-\- (2020). _RefManageR: Straightforward BibTeX and BibLaTeX
+Bibliography Management_. R package version 1.3.0. URL:
+[https://github.com/ropensci/RefManageR/](https://github.com/ropensci/RefManageR/).
+
+\-\-\- (2014). _Straightforward Bibliography Management in R Using the
+RefManager Package_. arXiv: 1403.2036 [cs.DL]. URL:
+[https://arxiv.org/abs/1403.2036](https://arxiv.org/abs/1403.2036).
+
+Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R
+package version 3.1.7. URL:
+[https://CRAN.R-project.org/package=tibble](https://CRAN.R-project.org/package=tibble).
+
+Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package
+version 1.1.1. URL:
+[https://CRAN.R-project.org/package=patchwork](https://CRAN.R-project.org/package=patchwork).
+
+R Core Team (2022). _R: A Language and Environment for Statistical
+Computing_. R Foundation for Statistical Computing. Vienna, Austria.
+URL: [https://www.R-project.org/](https://www.R-project.org/).
+
+Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous
+Paintings_. R package version 0.1.0.
+
+Wickham, H., R. François, L. Henry, et al. (2022). _dplyr: A Grammar of
+Data Manipulation_. R package version 1.0.9. URL:
+[https://CRAN.R-project.org/package=dplyr](https://CRAN.R-project.org/package=dplyr).
+
+Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN
+978-1498716963. Boca Raton, Florida: Chapman and Hall/CRC. URL:
+[https://yihui.org/knitr/](https://yihui.org/knitr/).
+
+\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research
+in R". In: _Implementing Reproducible Computational Research_. Ed. by
+V. Stodden, F. Leisch and R. D. Peng. ISBN 978-1466561595. Chapman and
+Hall/CRC. URL:
+[http://www.crcpress.com/product/isbn/9781466561595](http://www.crcpress.com/product/isbn/9781466561595).
+
+\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report
+Generation in R_. R package version 1.39. URL:
+[https://yihui.org/knitr/](https://yihui.org/knitr/).
+
+---
+class: end-matter
+#### Multimedia sources
+&lt;ul style="font-size: 15pt; text-align: left;"&gt;
+
+- Stitch https://media.giphy.com/media/BbQrNk32kD064/giphy.gif 
+- Mini tart icing https://gfycat.com/needygivingbufeo, as performed by [@jeanimbert](https://www.instagram.com/jeanimbert/?hl=en) 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
-<script src="libs/remark-latest.min.js"></script>
+<script src="assets/libs/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
 "slideNumberFormat": "%current%",
 "highlightStyle": "github",
