--- a/slides.html
+++ b/slides.html
@@ -39,6 +39,9 @@ class: center, middle, inverse, title-slide
 <script>document.addEventListener('DOMContentLoaded',function(){new xeBanner(JSON.parse('{"left":"<style>:root {\n  --xe-banner-fg: #5A6E73;\n  --xe-banner-font-size: 20pt;\n}<\/style>","right":"lizroten.com/slides","position":"bottom"}'))})</script>
 
 # There are 
+&lt;!-- This project was pitched to me as a quick data science win.  --&gt;
+&lt;!-- It would be straightforward, simple, and logical --&gt;
+&lt;!-- We are just updating some data --&gt;
 
 ---
 class: animated fadeInUp fadeOutUp
@@ -58,19 +61,43 @@ class: inverse center middle
 # Assess the damage
 
 ---
-# Project Intake 
+# Complete an intake 
 
-- Keep a list of all the things you dislike
+--
+- Read through everything - actually, everything
+
+--
+
+- Keep a list of all the things you dislike  
+
+--
+&lt;!-- You may find yourself in a place where the longform PDF documentatation doesn't align with what is happening in an Excel workbook --&gt;
+&lt;!-- This is the time to resolve that, and start --&gt;
 - Replicate findings/results
+
+--
 - Find your thing
 
 ---
-# Find your thing
+# Find your ✨thing✨
 
-find something about this project that you can go all-out. 
+Find some aspect of this project you can make shine.
+--
 
-Do you like maps? Make the best maps ever  
-Do you like plots? Make some gorgeous visualizations
+
+Maps? Make the best maps ever   
+  
+  
+--
+
+
+Efficiency? Unleash your `purrr`
+
+
+--
+&lt;!-- Not sure yet? Find a new skill and use this as a learning opportunity --&gt;
+Not sure? Pick out a new skill to learn
+
 ---
 class: inverse center middle
 
@@ -84,15 +111,29 @@ class: inverse center middle
 ---
 class: inverse center middle
 
-# Post-project debrief
-
----
 # Leave a gift, not a mystery
 
 ---
-class: center, middle
+## Post project debrief
 
-# Thanks!
+
+&lt;!-- Once the project is complete, and really truly complete, take a break --&gt;
+- You should be a slightly different person than when you closed the project
+---
+
+## Document not only the **what**, but the **why**
+
+We used 2019 AADT  
+&lt;!-- this is a factual statement, but doesn't tell us why  --&gt;
+&lt;!-- But, we completed this update in 2021, after the 2020 data had been released? --&gt;
+
+"We used 2019 traffic data __because__ 2020 was anomalous"
+---
+# I still don't care about trucks
+
+---
+class: center, middle
+# Thanks!  
 ---
 class: end-matter
 
@@ -100,62 +141,59 @@ class: end-matter
 Aden-Buie, G. (2022). _xaringanthemer: Custom xaringan CSS Themes_.
 https://pkg.garrickadenbuie.com/xaringanthemer/.
 
-Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and
-Extensions for xaringan Slides_. R package version 0.6.0. URL:
+Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and Extensions for
+xaringan Slides_. R package version 0.6.0. URL:
 [https://CRAN.R-project.org/package=xaringanExtra](https://CRAN.R-project.org/package=xaringanExtra).
 
-Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package
-version 0.1.8. URL:
+Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package version 0.1.8. URL:
 [https://CRAN.R-project.org/package=aRtsy](https://CRAN.R-project.org/package=aRtsy).
 
-Hester, J., H. Wickham, and G. Csárdi (2021). _fs: Cross-Platform File
-System Operations Based on libuv_. R package version 1.5.2. URL:
+Hester, J., H. Wickham, and G. Csárdi (2021). _fs: Cross-Platform File System Operations
+Based on libuv_. R package version 1.5.2. URL:
 [https://CRAN.R-project.org/package=fs](https://CRAN.R-project.org/package=fs).
 
-McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and
-BibLaTeX References in R". In: _The Journal of Open Source Software_.
-DOI: [10.21105/joss.00338](https://doi.org/10.21105%2Fjoss.00338).
+McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and BibLaTeX References in
+R". In: _The Journal of Open Source Software_. DOI:
+[10.21105/joss.00338](https://doi.org/10.21105%2Fjoss.00338).
 
-\-\-\- (2020). _RefManageR: Straightforward BibTeX and BibLaTeX
-Bibliography Management_. R package version 1.3.0. URL:
+\-\-\- (2020). _RefManageR: Straightforward BibTeX and BibLaTeX Bibliography
+Management_. R package version 1.3.0. URL:
 [https://github.com/ropensci/RefManageR/](https://github.com/ropensci/RefManageR/).
 
-\-\-\- (2014). _Straightforward Bibliography Management in R Using the
-RefManager Package_. arXiv: 1403.2036 [cs.DL]. URL:
+\-\-\- (2014). _Straightforward Bibliography Management in R Using the RefManager
+Package_. arXiv: 1403.2036 [cs.DL]. URL:
 [https://arxiv.org/abs/1403.2036](https://arxiv.org/abs/1403.2036).
 
-Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R
-package version 3.1.7. URL:
+Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R package version 3.1.7.
+URL:
 [https://CRAN.R-project.org/package=tibble](https://CRAN.R-project.org/package=tibble).
 
-Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package
-version 1.1.1. URL:
+Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package version 1.1.1.
+URL:
 [https://CRAN.R-project.org/package=patchwork](https://CRAN.R-project.org/package=patchwork).
 
-R Core Team (2022). _R: A Language and Environment for Statistical
-Computing_. R Foundation for Statistical Computing. Vienna, Austria.
-URL: [https://www.R-project.org/](https://www.R-project.org/).
+R Core Team (2022). _R: A Language and Environment for Statistical Computing_. R
+Foundation for Statistical Computing. Vienna, Austria. URL:
+[https://www.R-project.org/](https://www.R-project.org/).
 
-Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous
-Paintings_. R package version 0.1.0.
+Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous Paintings_. R package
+version 0.1.0.
 
-Wickham, H., R. François, L. Henry, et al. (2022). _dplyr: A Grammar of
-Data Manipulation_. R package version 1.0.9. URL:
+Wickham, H., R. François, L. Henry, et al. (2022). _dplyr: A Grammar of Data
+Manipulation_. R package version 1.0.9. URL:
 [https://CRAN.R-project.org/package=dplyr](https://CRAN.R-project.org/package=dplyr).
 
-Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN
-978-1498716963. Boca Raton, Florida: Chapman and Hall/CRC. URL:
+Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN 978-1498716963. Boca
+Raton, Florida: Chapman and Hall/CRC. URL:
 [https://yihui.org/knitr/](https://yihui.org/knitr/).
 
-\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research
-in R". In: _Implementing Reproducible Computational Research_. Ed. by
-V. Stodden, F. Leisch and R. D. Peng. ISBN 978-1466561595. Chapman and
-Hall/CRC. URL:
+\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research in R". In:
+_Implementing Reproducible Computational Research_. Ed. by V. Stodden, F. Leisch and R.
+D. Peng. ISBN 978-1466561595. Chapman and Hall/CRC. URL:
 [http://www.crcpress.com/product/isbn/9781466561595](http://www.crcpress.com/product/isbn/9781466561595).
 
-\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report
-Generation in R_. R package version 1.39. URL:
-[https://yihui.org/knitr/](https://yihui.org/knitr/).
+\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report Generation in R_. R
+package version 1.39. URL: [https://yihui.org/knitr/](https://yihui.org/knitr/).
 
 ---
 class: end-matter
