place tart icing and gift videos

--- a/slides.html
+++ b/slides.html
@@ -53,7 +53,9 @@ class: animated fadeInUp fadeOutUp
 class: animated fadeInUp fadeOutUp
 .pull-right[
 ### ...to this
-&lt;img src="./assets/fig/tart_icing.gif" width="380px" height="475px" /&gt;
+&lt;video id="tart-icing" controls muted height="400px" width="500px"&gt;
+  &lt;source src="assets/fig/tart_icing.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 ]
 ---
 class: inverse center middle
@@ -116,9 +118,15 @@ class: inverse center middle
 ---
 ## Post project debrief
 
-
+.pull-left[
+&lt;video id="gift-video" controls muted height="400px" width="500px"&gt;
+  &lt;source src="assets/fig/leave-a-gift.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
+]
+.pull-right[
 &lt;!-- Once the project is complete, and really truly complete, take a break --&gt;
 - You should be a slightly different person than when you closed the project
+]
 ---
 
 ## Document not only the **what**, but the **why**
@@ -141,59 +149,62 @@ class: end-matter
 Aden-Buie, G. (2022). _xaringanthemer: Custom xaringan CSS Themes_.
 https://pkg.garrickadenbuie.com/xaringanthemer/.
 
-Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and Extensions for
-xaringan Slides_. R package version 0.6.0. URL:
+Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and
+Extensions for xaringan Slides_. R package version 0.6.0. URL:
 [https://CRAN.R-project.org/package=xaringanExtra](https://CRAN.R-project.org/package=xaringanExtra).
 
-Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package version 0.1.8. URL:
+Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package
+version 0.1.8. URL:
 [https://CRAN.R-project.org/package=aRtsy](https://CRAN.R-project.org/package=aRtsy).
 
-Hester, J., H. Wickham, and G. Csárdi (2021). _fs: Cross-Platform File System Operations
-Based on libuv_. R package version 1.5.2. URL:
+Hester, J., H. Wickham, and G. Csárdi (2021). _fs: Cross-Platform File
+System Operations Based on libuv_. R package version 1.5.2. URL:
 [https://CRAN.R-project.org/package=fs](https://CRAN.R-project.org/package=fs).
 
-McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and BibLaTeX References in
-R". In: _The Journal of Open Source Software_. DOI:
-[10.21105/joss.00338](https://doi.org/10.21105%2Fjoss.00338).
+McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and
+BibLaTeX References in R". In: _The Journal of Open Source Software_.
+DOI: [10.21105/joss.00338](https://doi.org/10.21105%2Fjoss.00338).
 
-\-\-\- (2020). _RefManageR: Straightforward BibTeX and BibLaTeX Bibliography
-Management_. R package version 1.3.0. URL:
+\-\-\- (2020). _RefManageR: Straightforward BibTeX and BibLaTeX
+Bibliography Management_. R package version 1.3.0. URL:
 [https://github.com/ropensci/RefManageR/](https://github.com/ropensci/RefManageR/).
 
-\-\-\- (2014). _Straightforward Bibliography Management in R Using the RefManager
-Package_. arXiv: 1403.2036 [cs.DL]. URL:
+\-\-\- (2014). _Straightforward Bibliography Management in R Using the
+RefManager Package_. arXiv: 1403.2036 [cs.DL]. URL:
 [https://arxiv.org/abs/1403.2036](https://arxiv.org/abs/1403.2036).
 
-Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R package version 3.1.7.
-URL:
+Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R
+package version 3.1.7. URL:
 [https://CRAN.R-project.org/package=tibble](https://CRAN.R-project.org/package=tibble).
 
-Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package version 1.1.1.
-URL:
+Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package
+version 1.1.1. URL:
 [https://CRAN.R-project.org/package=patchwork](https://CRAN.R-project.org/package=patchwork).
 
-R Core Team (2022). _R: A Language and Environment for Statistical Computing_. R
-Foundation for Statistical Computing. Vienna, Austria. URL:
-[https://www.R-project.org/](https://www.R-project.org/).
+R Core Team (2022). _R: A Language and Environment for Statistical
+Computing_. R Foundation for Statistical Computing. Vienna, Austria.
+URL: [https://www.R-project.org/](https://www.R-project.org/).
 
-Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous Paintings_. R package
-version 0.1.0.
+Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous
+Paintings_. R package version 0.1.0.
 
-Wickham, H., R. François, L. Henry, et al. (2022). _dplyr: A Grammar of Data
-Manipulation_. R package version 1.0.9. URL:
+Wickham, H., R. François, L. Henry, et al. (2022). _dplyr: A Grammar of
+Data Manipulation_. R package version 1.0.9. URL:
 [https://CRAN.R-project.org/package=dplyr](https://CRAN.R-project.org/package=dplyr).
 
-Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN 978-1498716963. Boca
-Raton, Florida: Chapman and Hall/CRC. URL:
+Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN
+978-1498716963. Boca Raton, Florida: Chapman and Hall/CRC. URL:
 [https://yihui.org/knitr/](https://yihui.org/knitr/).
 
-\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research in R". In:
-_Implementing Reproducible Computational Research_. Ed. by V. Stodden, F. Leisch and R.
-D. Peng. ISBN 978-1466561595. Chapman and Hall/CRC. URL:
+\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research
+in R". In: _Implementing Reproducible Computational Research_. Ed. by
+V. Stodden, F. Leisch and R. D. Peng. ISBN 978-1466561595. Chapman and
+Hall/CRC. URL:
 [http://www.crcpress.com/product/isbn/9781466561595](http://www.crcpress.com/product/isbn/9781466561595).
 
-\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report Generation in R_. R
-package version 1.39. URL: [https://yihui.org/knitr/](https://yihui.org/knitr/).
+\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report
+Generation in R_. R package version 1.39. URL:
+[https://yihui.org/knitr/](https://yihui.org/knitr/).
 
 ---
 class: end-matter
