--- a/slides.html
+++ b/slides.html
@@ -9,6 +9,8 @@
     <link href="slides_files/tile-view/tile-view.css" rel="stylesheet" />
     <script src="slides_files/tile-view/tile-view.js"></script>
     <link href="slides_files/animate.css/animate.xaringan.css" rel="stylesheet" />
+    <link href="slides_files/panelset/panelset.css" rel="stylesheet" />
+    <script src="slides_files/panelset/panelset.js"></script>
     <link href="slides_files/xaringanExtra-banner/banner.css" rel="stylesheet" />
     <script src="slides_files/xaringanExtra-banner/banner.js"></script>
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/microsoft/310/relieved-face_1f60c.png"/>
@@ -38,23 +40,37 @@ class: center, middle, inverse, title-slide
 
 <script>document.addEventListener('DOMContentLoaded',function(){new xeBanner(JSON.parse('{"left":"<style>:root {\n  --xe-banner-fg: #5A6E73;\n  --xe-banner-font-size: 20pt;\n}<\/style>","right":"lizroten.com/slides","position":"bottom"}'))})</script>
 
-# There are 
+# I found myself
+comparing the number of axels to expected weight in commercial freight trucks in the state of Minnesota 
+
+.center[
+&lt;img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a truck" style="transform: scaleX(-1);"&gt;
+]
 &lt;!-- This project was pitched to me as a quick data science win.  --&gt;
 &lt;!-- It would be straightforward, simple, and logical --&gt;
 &lt;!-- We are just updating some data --&gt;
+---
+## Internet phenomenon, of oddly statisfying things
+
+- objects fitting perfectly into other objects
+- perfect cake decoration
+- pressure washing very dirty things  
 
 ---
-class: animated fadeInUp fadeOutUp
+class: animated fadeInUp
+
+
 .pull-left[
-### From this...
-&lt;img src="./assets/fig/stitch_eyes.webp" width="600px" /&gt;
+### Smoothie!
+&lt;video id="smoothie" controls muted height="400px" width="500px"&gt;
+&lt;source src="assets/fig/smoothie_satisfying.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
 ]
----
-class: animated fadeInUp fadeOutUp
+
 .pull-right[
-### ...to this
+### Tarts!
 &lt;video id="tart-icing" controls muted height="400px" width="500px"&gt;
-  &lt;source src="assets/fig/tart_icing.mp4" type="video/mp4"&gt;
+&lt;source src="assets/fig/tart_icing.mp4" type="video/mp4"&gt;
 &lt;/video&gt;
 ]
 ---
@@ -63,7 +79,7 @@ class: inverse center middle
 # Assess the damage
 
 ---
-# Complete an intake 
+## Complete an intake 
 
 --
 - Read through everything - actually, everything
@@ -73,32 +89,54 @@ class: inverse center middle
 - Keep a list of all the things you dislike  
 
 --
-&lt;!-- You may find yourself in a place where the longform PDF documentatation doesn't align with what is happening in an Excel workbook --&gt;
+&lt;!-- You may find yourself in a place where the long-form PDF documentation doesn't align with what is happening in an Excel workbook --&gt;
 &lt;!-- This is the time to resolve that, and start --&gt;
 - Replicate findings/results
 
---
-- Find your thing
-
 ---
-# Find your ✨thing✨
+class: center middle animated fadeInUp
+&lt;!-- but, most importantly, you must find your thing --&gt;
+&lt;div id="thing"&gt;
+.center.animated.fadeInUp[
+## Find your ✨thing✨
+]
+&lt;/div&gt;
+---
+&lt;!-- Find some aspect of this project you can make shine. --&gt;
+.panelset.sideways[
+.panel[.panel-name[Plots?]
 
-Find some aspect of this project you can make shine.
---
+&lt;!-- finally see what that pretty plot on twitter is all about --&gt;
+&lt;img  src="assets/fig/plot_score_abs_change_combo-1.png" alt="a ggplot with multiple data distribution visualization methods" width="70%"&gt;
+]
+.panel[.panel-name[Maps?]
+&lt;!-- prepare to make some bespoke ggplot2 legends --&gt;
+&lt;img src="assets/fig/map_all_tiers-1.png" alt="a ggplot with multiple data distribution visualization methods" width="70%"&gt;
+] 
+.panel[.panel-name[Speed?]
+&lt;!-- watch out, because your machine is going to be running *hot* --&gt;
+
+```r
+# Conflate proposed corridors with MnDOT AADT and HCAADT -----
+proposed_conflation_match &lt;- purrr::map_dfr(
+  1:nrow(all_prop_corridors),
+  function(x) {
+    first_join &lt;- sf::st_join(all_prop_corridors[x, ] %&gt;%
+                                sf::st_transform(26915),
+                              aadt %&gt;%
+                                unique() %&gt;%
+                                sf::st_transform(26915),
+                              largest = FALSE,
+                              left = TRUE)
+    ...
+  })
+```
 
 
-Maps? Make the best maps ever   
+
   
-  
---
-
-
-Efficiency? Unleash your `purrr`
-
-
---
-&lt;!-- Not sure yet? Find a new skill and use this as a learning opportunity --&gt;
-Not sure? Pick out a new skill to learn
+]
+]
 
 ---
 class: inverse center middle
@@ -106,9 +144,12 @@ class: inverse center middle
 # Do and document
 
 ---
-💌
+
+## Complete the work, document along the way
 
 &gt; Documentation is a love letter to your future self.  - Damien Conway 
+
+
 
 ---
 class: inverse center middle
@@ -120,7 +161,7 @@ class: inverse center middle
 
 .pull-left[
 &lt;video id="gift-video" controls muted height="400px" width="500px"&gt;
-  &lt;source src="assets/fig/leave-a-gift.mp4" type="video/mp4"&gt;
+&lt;source src="assets/fig/leave-a-gift.mp4" type="video/mp4"&gt;
 &lt;/video&gt;
 ]
 .pull-right[
@@ -128,20 +169,54 @@ class: inverse center middle
 - You should be a slightly different person than when you closed the project
 ]
 ---
+## Not only **what**, but **why**
 
-## Document not only the **what**, but the **why**
+.panelset.sideways[
+.panel[.panel-name[What]
+&lt;!-- this is a factual statement, but doesn't tell us anything about why we would 2019 over any other year  --&gt;
+We used 2019 traffic data
+]
+.panel[.panel-name[Why]
+&lt;!-- here, we add some more context.--&gt;
+&lt;!-- 2020 was a dumpster fire, aka, anomalous, year, so we went with 2019.  --&gt;
+We used 2019 traffic data __because__ 2020 was anomalous 
+]
+]
 
-We used 2019 AADT  
-&lt;!-- this is a factual statement, but doesn't tell us why  --&gt;
-&lt;!-- But, we completed this update in 2021, after the 2020 data had been released? --&gt;
-
-"We used 2019 traffic data __because__ 2020 was anomalous"
 ---
+## Not only **what**, but **why**
+
+.panelset.sideways[
+.panel[.panel-name[What]
+&lt;!-- this is a factual statement, but doesn't tell us anything about why we would 2019 over any other year  --&gt;
+We set the tier breaks at 15.4 and 26.2 points
+]
+.panel[.panel-name[Why]
+&lt;!-- here, we add some more context --&gt;
+We set the tier breaks at 15.4 and 26.2 points __because__ planners used their best judgement
+]
+]
+
+---
+class: center  
 # I still don't care about trucks
+
+&lt;img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a truck" style="transform: scaleX(-1);"&gt;  
+
+--
+  
+but everyone in my office knows about this documentation
+
+--
+
+and I'm very proud of my work.
 
 ---
 class: center, middle
 # Thanks!  
+
+https://lizroten.com/oddly
+
 ---
 class: end-matter
 
@@ -149,61 +224,59 @@ class: end-matter
 Aden-Buie, G. (2022). _xaringanthemer: Custom xaringan CSS Themes_.
 https://pkg.garrickadenbuie.com/xaringanthemer/.
 
-Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and
-Extensions for xaringan Slides_. R package version 0.6.0. URL:
+Aden-Buie, G. and M. T. Warkentin (2022). _xaringanExtra: Extras and Extensions for
+xaringan Slides_. R package version 0.6.0. URL:
 [https://CRAN.R-project.org/package=xaringanExtra](https://CRAN.R-project.org/package=xaringanExtra).
 
-Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package version
-0.1.8. URL:
+Derks, K. (2022). _aRtsy: Generative Art with ggplot2_. R package version 0.1.8. URL:
 [https://CRAN.R-project.org/package=aRtsy](https://CRAN.R-project.org/package=aRtsy).
 
 Hester, J., H. Wickham, and G. Csárdi (2021). _fs: Cross-Platform File System
 Operations Based on libuv_. R package version 1.5.2. URL:
 [https://CRAN.R-project.org/package=fs](https://CRAN.R-project.org/package=fs).
 
-McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and BibLaTeX
-References in R". In: _The Journal of Open Source Software_. DOI:
+McLean, M. W. (2017). "RefManageR: Import and Manage BibTeX and BibLaTeX References in
+R". In: _The Journal of Open Source Software_. DOI:
 [10.21105/joss.00338](https://doi.org/10.21105%2Fjoss.00338).
 
 \-\-\- (2020). _RefManageR: Straightforward BibTeX and BibLaTeX Bibliography
 Management_. R package version 1.3.0. URL:
 [https://github.com/ropensci/RefManageR/](https://github.com/ropensci/RefManageR/).
 
-\-\-\- (2014). _Straightforward Bibliography Management in R Using the
-RefManager Package_. arXiv: 1403.2036 [cs.DL]. URL:
+\-\-\- (2014). _Straightforward Bibliography Management in R Using the RefManager
+Package_. arXiv: 1403.2036 [cs.DL]. URL:
 [https://arxiv.org/abs/1403.2036](https://arxiv.org/abs/1403.2036).
 
-Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R package
-version 3.1.7. URL:
+Müller, K. and H. Wickham (2022). _tibble: Simple Data Frames_. R package version
+3.1.7. URL:
 [https://CRAN.R-project.org/package=tibble](https://CRAN.R-project.org/package=tibble).
 
-Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package version
-1.1.1. URL:
+Pedersen, T. L. (2020). _patchwork: The Composer of Plots_. R package version 1.1.1.
+URL:
 [https://CRAN.R-project.org/package=patchwork](https://CRAN.R-project.org/package=patchwork).
 
-R Core Team (2022). _R: A Language and Environment for Statistical Computing_.
-R Foundation for Statistical Computing. Vienna, Austria. URL:
+R Core Team (2022). _R: A Language and Environment for Statistical Computing_. R
+Foundation for Statistical Computing. Vienna, Austria. URL:
 [https://www.R-project.org/](https://www.R-project.org/).
 
-Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous Paintings_.
-R package version 0.1.0.
+Thoen, E. (2022). _dutchmasters: Colour Pallettes based on Famous Paintings_. R
+package version 0.1.0.
 
 Wickham, H., R. François, L. Henry, et al. (2022). _dplyr: A Grammar of Data
 Manipulation_. R package version 1.0.9. URL:
 [https://CRAN.R-project.org/package=dplyr](https://CRAN.R-project.org/package=dplyr).
 
-Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN
-978-1498716963. Boca Raton, Florida: Chapman and Hall/CRC. URL:
+Xie, Y. (2015). _Dynamic Documents with R and knitr_. 2nd. ISBN 978-1498716963. Boca
+Raton, Florida: Chapman and Hall/CRC. URL:
 [https://yihui.org/knitr/](https://yihui.org/knitr/).
 
-\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research in R".
-In: _Implementing Reproducible Computational Research_. Ed. by V. Stodden, F.
-Leisch and R. D. Peng. ISBN 978-1466561595. Chapman and Hall/CRC. URL:
+\-\-\- (2014). "knitr: A Comprehensive Tool for Reproducible Research in R". In:
+_Implementing Reproducible Computational Research_. Ed. by V. Stodden, F. Leisch and
+R. D. Peng. ISBN 978-1466561595. Chapman and Hall/CRC. URL:
 [http://www.crcpress.com/product/isbn/9781466561595](http://www.crcpress.com/product/isbn/9781466561595).
 
-\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report Generation
-in R_. R package version 1.39. URL:
-[https://yihui.org/knitr/](https://yihui.org/knitr/).
+\-\-\- (2022). _knitr: A General-Purpose Package for Dynamic Report Generation in R_.
+R package version 1.39. URL: [https://yihui.org/knitr/](https://yihui.org/knitr/).
 
 ---
 class: end-matter
@@ -212,6 +285,8 @@ class: end-matter
 
 - Stitch https://media.giphy.com/media/BbQrNk32kD064/giphy.gif 
 - Mini tart icing https://gfycat.com/needygivingbufeo, as performed by [@jeanimbert](https://www.instagram.com/jeanimbert/?hl=en) 
+- Satisfying smoothie from [fenitas.nl](https://www.tiktok.com/@fenitas.nl/video/7093892979659738373)
+- Truck illustration,  MnDOT vehicle classification scheme. Available [here](https://www.dot.state.mn.us/traffic/data/reports/vc/Vehicle_Classification_Scheme.pdf)
 ---
 
 other advice
@@ -220,21 +295,21 @@ other advice
 - specific way that I saw this in this problem
 - I got this problem that was easy, but it wasn't -&gt; good hook
 - The truck becomes a plot device that can drive the story along
-    - (maybe this big truck image that follows through)
-    - most people won't be interested in the truck, 
+- (maybe this big truck image that follows through)
+- most people won't be interested in the truck, 
 - "I still don't care about trucks, but everyone in my office, go look at this thing because..."
 - in the do-and-document
-    - show what "we" did.
-    - start with statements
-    - here is what we did
-    - *now* so when you do this, try this thing
+- show what "we" did.
+- start with statements
+- here is what we did
+- *now* so when you do this, try this thing
 - have the image of wrapping something up in a nice little box
 - concrete examples
-    - lean into the part of the person bringing your project
-    - act into it -&gt; the audience knows where this is going, so you can lean into it. 
-    - I had to find the exciting stuff. It wasn't that easy, but I made it into a satisfying adventure. 
-    
-    better off with an "MP4", you get the media control. 
+- lean into the part of the person bringing your project
+- act into it -&gt; the audience knows where this is going, so you can lean into it. 
+- I had to find the exciting stuff. It wasn't that easy, but I made it into a satisfying adventure. 
+
+better off with an "MP4", you get the media control. 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="assets/libs/remark-latest.min.js"></script>
